overflow fixing and menu bar

--- a/querry.css
+++ b/querry.css
@@ -21,6 +21,9 @@
 }
 
 @media (max-width: 1020px) {
+  html {
+    font-size: 58%;
+  }
   .inner-container {
     width: 100%;
     padding-right: 90px;
@@ -39,6 +42,18 @@
 }
 
 @media (max-width: 800px) {
+  html {
+    font-size: 55%;
+  }
+
+  .main-nav-list {
+    display: none;
+  }
+
+  .menu {
+    display: inline-grid;
+  }
+
   .inner-container {
     color: #000;
     padding: 0 15rem;
@@ -58,11 +73,23 @@
 }
 
 @media (max-width: 630px) {
+  html {
+    font-size: 50%;
+  }
+
   .inner-container {
     /* width: 100%; */
     padding: 0 25rem;
     padding-right: 13rem;
     font-size: 20px;
+  }
+
+  .menu {
+    display: inline-block;
+  }
+
+  nav ul {
+    display: none;
   }
 
   .inner-container h1 {
