--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,17 @@ html {
   overflow-x: hidden;
 }
 
+body {
+  overflow-x: hidden;
+}
+
+.menu {
+  font-size: 6rem;
+  font-weight: 600;
+  color: blue;
+  display: none;
+}
+
 .container {
   margin: 0 auto;
   max-width: 120rem;
@@ -18,7 +29,6 @@ html {
 nav {
   display: flex;
   justify-content: space-between;
-  background-color: #f7f7f7;
   background-color: rgb(51, 17, 4);
   background-color: rgb(118, 168, 168);
   /* background: linear-gradient(to right, rgb(34, 82, 82), rgb(196, 213, 251)); */
@@ -274,7 +284,7 @@ h1 span {
   padding: rem 8rem;
   bottom: 0;
   width: 100%;
-  height: 12rem;
+  height: 8rem;
   background-color: rgba(22, 17, 17, 0.889);
   z-index: 999;
 }
@@ -314,4 +324,3 @@ h1 span {
   color: #fff;
   background-color: rgb(115, 87, 16);
 }
-
